# miniMIDI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example_auto_set_url.cmake  todo.md
flash_uti/: CMakeLists.txt  flash_uti.c
platform/win32/: CMakeLists.txt
ref/: DSP Buffers.pptx  MiniDSP buffers.xlsx  P85 layout.pptx  mM_Audio.pptx
ref/Components/: BOM.xlsx
ref/Pico/: adafruit-circuitpython-vcc_gnd_yd_rp2040-en_US-9.2.7.uf2  adafruit-circuitpython-waveshare_rp2040_pizero-en_US-9.2.7.uf2  dcd_rp2040.c
src/: App.cpp  App.h  CMakeLists.txt  ast.hpp  ast_char.hpp  ast_pack.cpp  ast_pack.h  audio.cpp  autogen_tusb_config.h  autogen_usb_descriptors.h  cli_impl.cpp  data.cpp  data_types.h  fpm_iir.cpp  fpm_iir.h  hwConfig.h  i2s_example.c  message.cpp  message.h  miniMIDI.cpp  miniMIDI.md  mod_Audio.cpp  mod_Audio.h  mod_Blink.cpp  mod_Blink.h  mod_DSP.cpp  mod_DSP.h  mod_Display.cpp  mod_Display.h  mod_Encoders.cpp  mod_Encoders.h  mod_I2S_Audio.cpp  mod_I2S_Audio.h  mod_Joys.cpp  mod_Joys.h  mod_LedStrip.cpp  mod_LedStrip.h  mod_Lua.cpp  mod_Lua.h  mod_SD.cpp  (+41 more)
src v0/: CMakeLists.txt  config.cpp  flash_data.h  midi.cpp
src/ast/: as_ebnf.h  ast.cpp  ast.h  ast_char.h  ast_grammar.h  ast_pack.cpp  ast_pack.h  bblocks.h  choice.h  d_functions.h  decorator.h  deps.h  grammar.gram  helpers.h  regex.h  repeat.h  replace.h  replex.gram.md  sequence.h  token.h  variant.h
src/dsp/: CxxFile.py  Table.py  Table_sinWave.cpp  Table_sinWave.h  Tables_DSP.cpp  Tables_DSP.h  envelope.h  exec_asm.cpp  exec_asm.h  findtype.h  fpm.h  fpm_conv.inc  fpm_custom.inc  fpm_div.inc  fpm_iir.cpp  fpm_iir.h  fpm_macros.py  fpm_mul.inc  fpm_mul_div.inc  genTables.py  iir.cpp  iir.h  opModWave.cpp  opModWave.h  paramWave.cpp  paramWave.h  types.h  uti.h  wave v0 old.h  wave v1 templates.h  wave v3.h  wave.cpp  wave.h  wave_0.h  wave_1.h  wave_2.h  wave_3.h  wave_4.h  wave_5.h  wave_6.h  (+13 more)
src/dsp/wavetables/: WT_BASE.cpp  base_tables.py  convert_wav.py
src/ledColors/: header.py  led_colors.cpp
src/lua/: luaconf.h
src/lua_pack/: pack.cpp  pack.h
src/midi_const/: midi_frequencies.cpp  midi_frequencies.h  midi_frequencies.py
src/uti/: signature.h  variant.h
src/wavetables/: WT_BASE.cpp  WT_BASE.h  convert_wav.py  wavetables.py
tusb_midi/: CMakeLists.txt  main.c  tusb_config.h
uti/explorations/: bigblocks.py  fixed.py  negative.py
uti/fonts/: 5x5_font.h  7linedigital_font.h  BMSPA_font.h  BMplain_font.h  Blokus_font.h  Commo-Monospaced_font.h  HISKYF21_font.h  HUNTER_font.h  Minimum+1_font.h  Minimum_font.h  SUPERDIG_font.h  acme_5_outlines_font.h  aztech_font.h  bubblesstandard_font.h  crackers_font.h  fontgen.py  formplex12_font.h  haiku_font.h  homespun_font.h  kiwisoda_font.h  m38_font.h  pzim3x5_font.h  renew_font.h  sloth_font.h  tama_mini02_font.h  zxpix_font.h
uti/usb_descr/: build_descriptor.py  tusb_const.py
